fixed bug where alert dialog of friend selector - other friend username not found - was not shown on top.  Created New Alert_Modal function that takes in a title string and a jquery selector of parent element to get z-index base

--- a/crush/static/fbdater.css
+++ b/crush/static/fbdater.css
@@ -240,6 +240,7 @@ a.logo{
 	vertical-align:middle;
 	line-height:55px;
 	padding-left:5px;
+	font-weight:bold;
 }
 
 a.logo #to {
